--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
       formData.forEach((value, key) => data[key] = parseFloat(value));
 
       try {
-        const response = await fetch('http://127.0.0.1:5000/predict', {
+        const response = await fetch('https://employee-attrition-app-sikv.onrender.com/predict', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
